--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         docker { image 'python:3.9.21-alpine3.21' }
       }
       steps {
-        python3 -c "print('Hello World')"
+        print('Hello World')
       }
     }
     stage('Front-end') {
