--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/sonar-project.properties
@@ -3,6 +3,7 @@ sonar.projectKey=my_project_key
 sonar.projectName=My Project Name
 sonar.projectVersion=1.0
 
+sonar.web.port=9000
 # Set the SonarQube server URL
 sonar.host.url=http://localhost:9000
 
